# Masterarbeit

./: .gitignore  build_grad.m  compute_correct_step_size.m  compute_shading.m  cuda_potts_solver.m  cuda_pottslab.m  main1.m  minimizing_with_line_search.m  objfungrad.m  pottsSolverTest.m  pottslabTest.m  singleViewReconstructionWithShapeFromShading.m  solve_min_surface.m  solve_potts_model.m
Pottslab_cuda/: CMakeLists.txt  benchmark_script
Pottslab_cuda/src/: CPUPottsSolver.cpp  CPUPottsSolver.h  CudaBuffer.cu  CudaCopyData.cu  CudaKernels.cu  CudaKernels4ADMM.cu  CudaKernels8ADMM.cu  GPUPottsSolver.cu  GPUPottsSolver.h  Image.cpp  Image.h  PottsSolver.cpp  PottsSolver.cu  PottsSolver.h  Solver.cu  helper.cu  helper.h  main.cu  main_mex.cpp
Pottslab_cuda/src/potts/: CudaCopyData.cu  CudaKernels4ADMM.cu  CudaKernels8ADMM.cu  CudaPotts.cu
Pottslab_cuda/src/util/: CudaBuffer.h  helper.cu  helper.h
